Add opacity and change form and table color.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
           <div class="card bg-dark mb-4">
             <div class="card-header text-white">Current Transit Schedule</div>
-            <div class="card-body bg-white">
-              <table class="table" id="trainTable">
-                <thead class="text-primary">
+            <div class="card-body bg-dark">
+              <table class="table table-dark" id="trainTable">
+                <thead class="text-white">
                   <tr>
                     <th scope="col">Transit Name</th>
                     <th scope="col">Destination</th>
@@ -58,7 +58,7 @@
 
           <div class="card bg-dark">
             <div class="card-header text-white">Add A New Transit Line</div>
-            <div class="card-body bg-white">
+            <div class="card-body bg-dark text-white">
               <form>
                 <div class="form-group">
                   <label for="trainNameInput">Transit Name</label>
@@ -98,7 +98,7 @@
                     placeholder="Enter transit frequency time"
                   />
                 </div>
-                <button type="submit" id="addTrain" class="btn btn-primary">
+                <button type="submit" id="addTrain" class="btn btn-secondary">
                   Find Next Arrival
                 </button>
               </form>
